--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <nav>
-        <a href="/">Home</a> |
-        <a href="posts/index">Posts</a>
+        <a href="/mvc">Home</a> |
+        <a href="/mvc/posts/index">Posts</a>
     </nav>
 
     {% block body %}
